fixing color contrast on help section headers

--- a/biomarkerTools/src/app/stylus/help.styl
+++ b/biomarkerTools/src/app/stylus/help.styl
@@ -4,3 +4,14 @@
     padding-left: 0px;
 h5, h6
   font-weight bold
+  
+.glossary-title
+  background-color #154976
+  color white
+  padding 5px 0
+  a
+  	text-decoration underline
+  	&:hover
+  		text-decoration none
+  *
+  	color inherit
